Allow visible slides in sync snapshots